--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.student.lab02_interactive.MainActivity">
+    tools:context="com.example.student.lab05_mediator_pattern.MainActivity">
 
 
     <TextView
@@ -28,7 +28,7 @@
         android:paddingLeft="20dp"
         android:layout_marginBottom="16dp"
         android:layout_marginTop="16dp"
-        android:onClick="clickToppings"
+        android:onClick="mediator"
         />
 
 
@@ -48,9 +48,10 @@
         >
 
         <Button
+            android:id="@+id/button_decrement"
             android:layout_width="48dp"
             android:layout_height="48dp"
-            android:onClick="increment"
+            android:onClick="mediator"
             android:text="+" />
 
         <TextView
@@ -65,9 +66,10 @@
             android:textSize="16dp" />
 
         <Button
+            android:id="@+id/button_increment"
             android:layout_width="48dp"
             android:layout_height="48dp"
-            android:onClick="decrement"
+            android:onClick="mediator"
             android:text="-" />
     </LinearLayout>
 
@@ -90,9 +92,10 @@
 
 
     <Button
+        android:id="@+id/button_Order"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:onClick="submitOrder"
+        android:onClick="mediator"
         android:text="Order"
         android:layout_marginBottom="16dp"
         android:layout_marginTop="16dp"
